--- a/DutchTreat/Views/App/Index.cshtml
+++ b/DutchTreat/Views/App/Index.cshtml
@@ -1,13 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@{ 
+    ViewBag.Title = "Home Page";
+}
+
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Dutch Treat</title>
-    <link href="css/site.css" rel="stylesheet" />
+    <title>Dutch Treat: @ViewBag.Title</title>
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <h2>Dutch Treat</h2>
+    <h2>@ViewBag.Title</h2>
     <div class="product-info">
-        <img src="/img/VanGogh.jpg" />
+        <img src="~/img/VanGogh.jpg" />
         <h3>Mug</h3>
         <ul class="product-props">
             <li>Price $9.99</li>
@@ -61,7 +65,7 @@
         </form>
     </div>
 
-    <script src="lib/jQuery/dist/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="~/lib/jQuery/dist/jquery.min.js"></script>
+    <script src="~/js/index.js"></script>
 </body>
 </html>
