Finished MVC Section

--- a/DutchTreat/Views/App/Contact.cshtml
+++ b/DutchTreat/Views/App/Contact.cshtml
@@ -28,5 +28,8 @@
     <br />
     <textarea rows="4" asp-for="Message"></textarea>
     <br />
+    @ViewBag.UserMessage
+    <br />
     <input type="submit" value="Send Message" />
+    
 </form>
