--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Dutch Treat: @ViewBag.Title</title>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
+    <header class="container">
         <h1>Welcome to Dutch Treat</h1>
         <menu>
             <ul>
@@ -15,14 +16,17 @@
             </ul>
         </menu>
     </header>
-    <section>
+    <section class="container">
         <h2>@ViewBag.Title</h2>
         @RenderBody()
     </section>
-    <footer>Copyright 2017 Dutch Treat LLC</footer>
+    <footer class="container">
+        <div class="text-center">Copyright 2017 Dutch Treat LLC</div>
+    </footer>
     
 
     <script src="~/lib/jQuery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/index.js"></script>
     @RenderSection("scripts", false)
 </body>
