--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -22,14 +22,13 @@
         </header>
     </div>
     <section class="container">
-        <h2>@ViewBag.Title</h2>
+        <h2 class="text-center">@ViewBag.Title</h2>
         @RenderBody()
     </section>
     <footer class="container">
         <div class="text-center">Copyright 2017 Dutch Treat LLC</div>
     </footer>
     
-
     <script src="~/lib/jQuery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/index.js"></script>
