--- a/DutchTreat/Views/Account/Login.cshtml
+++ b/DutchTreat/Views/Account/Login.cshtml
@@ -8,7 +8,8 @@
 }
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <form>
+        <div asp-validation-summary="ModelOnly"></div>
+        <form method="post">
             <div class="form-group">
                 <label asp-for="Username">UserName</label>
                 <input asp-for="Username" class="form-control" />
