Added deployment scripts

--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
         <script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-3.2.1.min.js"
                 asp-fallback-src="~/lib/jQuery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"></script>
-        <script src="//ajax.aspnetcdn.com/ajaz/bootstrap/3.3.6/bootstrap.min.js"
+        <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"></script>
         <script src="~/js/index.js"></script>
